WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
230819
applyConstraints throws OverconstrainedError if specify exact for deviceId
https://bugs.webkit.org/show_bug.cgi?id=230819
Summary
applyConstraints throws OverconstrainedError if specify exact for deviceId
Trung Le
Reported
2021-09-26 23:19:56 PDT
It seems in the latest Safari 15.0, calling applyConstraints for a video media stream track with exact for deviceId will results in OverconstrainedError - Constraint not supported. This works in Safari 14.
Attachments
Patch
(5.54 KB, patch)
2021-09-28 07:13 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Kevin Neal
Comment 1
2021-09-27 09:41:57 PDT
Thanks for filing. Please attach a file, or link to a demo, that documents the bug.
Radar WebKit Bug Importer
Comment 2
2021-09-27 09:42:10 PDT
<
rdar://problem/83577361
>
Trung Le
Comment 3
2021-09-27 10:08:57 PDT
I have been able to reproduce this issue with just use navigator.mediaDevices.getUserMedia() and applyConstraints() API. Repo steps: - Call stream = navigator.mediaDevices.getUserMedia({ video: { deviceId: { exact: <deviceId string> }}}); <- exact here works. - Call stream.getVideoTracks()[0].applyConstraints({ deviceId: { exact: <deviceId string> }}); <- throw OverconstrainedError error in Safari 15 but not Safari 14.
youenn fablet
Comment 4
2021-09-28 07:09:44 PDT
Thanks for the report, I'll fix it soon but would like to understand the impact for your application. Thanks, Y
youenn fablet
Comment 5
2021-09-28 07:13:20 PDT
Created
attachment 439472
[details]
Patch
EWS
Comment 6
2021-09-28 09:20:34 PDT
Committed
r283173
(
242221@main
): <
https://commits.webkit.org/242221@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 439472
[details]
.
Trung Le
Comment 7
2021-09-28 09:35:37 PDT
Thanks. That was quick. This completely breaks our video filter when we try to apply video constraints. Will this be released in the next Safari patch version?
Trung Le
Comment 8
2021-12-16 11:08:20 PST
This is still an issue in Safari 15.2.
Trung Le
Comment 9
2022-03-24 19:21:56 PDT
The issue is still reproducible in Safari 15.3 but seems to be fixed in Technology Preview version. Will it be available in 15.4?
youenn fablet
Comment 10
2022-03-29 02:32:36 PDT
Yes, it should be fixed in Safari 15.4, can you validate this?
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug