applyConstraints throws OverconstrainedError if specify exact for deviceId https://bugs.webkit.org/show_bug.cgi?id=230819 <rdar://problem/83577361>

Reviewed by Eric Carlson.

Source/WebKit:

We were not setting properly the persistent device ID of remote sources.
Set values according provided device.

Test: fast/mediastream/applyConstraints-deviceId.html

* WebProcess/cocoa/RemoteRealtimeAudioSource.cpp:
(WebKit::RemoteRealtimeAudioSource::RemoteRealtimeAudioSource):
* WebProcess/cocoa/RemoteRealtimeVideoSource.cpp:
(WebKit::RemoteRealtimeVideoSource::RemoteRealtimeVideoSource):

LayoutTests:

* fast/mediastream/applyConstraints-deviceId-expected.txt: Added.
* fast/mediastream/applyConstraints-deviceId.html: Added.


Canonical link: https://commits.webkit.org/242221@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@283173 268f45cc-cd09-0410-ab3c-d52691b4dbfc